# aiapp

./: CLEANUP_SUMMARY.md  COMPREHENSIVE_AUDIT_REPORT.md  LIBRARIES_AND_FRAMEWORKS.md  OLLAMA_INTEGRATION_SUMMARY.md  OLLAMA_SETUP.md  QUICK_START_OLLAMA.md  REPOSITORY_CHEAT_SHEET.md  REPOSITORY_PATTERN_EXPLAINED.md  VOICE_SERVICE_ANALYSIS.md  cleanup.bat
aiapp/: pom.xml
aiapp/src/main/java/com/example/aiapp/: AiappApplication.java
aiapp/src/main/resources/: application.properties
face-service/: FaceService.java
ml-service/: .env  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
ml-service/app/api/: router.py
ml-service/app/api/routes/: audio.py  health.py  vision.py
ml-service/app/core/: app.py  settings.py
ml-service/app/schemas/: audio.py  vision.py
ml-service/app/services/: __init__.py  face_provider.py  face_service.py  images.py  ocr_service.py  speech_service.py  uploads.py
ml-service/scripts/: bootstrap.ps1  dev.ps1
mobile_app/: pubspec.yaml
mobile_app/android/app/src/main/: AndroidManifest.xml
mobile_app/lib/: main.dart
mobile_app/lib/models/: message.dart  schedule.dart
mobile_app/lib/screens/: camera_screen.dart  chat_screen.dart  face_login_screen.dart  login_screen.dart  profile_screen.dart  schedule_screen.dart
mobile_app/lib/services/: ai_service.dart  ml_service.dart  tts_service.dart
mobile_app/macos/Flutter/: GeneratedPluginRegistrant.swift
mobile_app/test/services/: voice_service_test.dart
src/test/java/com/example/aiapp/: AiappApplicationTests.java
src/ui/: ChatUI.java
(+40 files in other folders)
